--- a/Zadanie_Nr3_MJ.ipynb
+++ b/Zadanie_Nr3_MJ.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMXBCEsTjjTqSIIg8Ixjlal",
+      "authorship_tag": "ABX9TyP7/W4aZTJHwMP2dYgna+iz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -115,7 +115,7 @@
         "print(\"\\nStatystyka opisowa wybranych kolumn:\")\n",
         "print(X.describe())"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,7 +223,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,7 +301,7 @@
           "height": 407
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -343,7 +343,7 @@
           "height": 407
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -391,7 +391,7 @@
           "height": 487
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -447,7 +447,7 @@
           "height": 517
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -524,7 +524,7 @@
           "height": 564
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -601,7 +601,7 @@
           "height": 667
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -747,7 +747,7 @@
           "height": 717
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -917,7 +917,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -933,6 +933,21 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Co to daje\n",
+        "\n",
+        "Zamiast 11 zmiennych masz 5 „syntetycznych”, które zachowują 96% całkowitej zmienności.\n",
+        "\n",
+        "Dane są niezależne liniowo (PC są ortogonalne), więc usuwasz współliniowość.\n",
+        "\n",
+        "Możesz na tych 5 wymiarach robić dalej np. klasteryzację, regresję, klasyfikację, wykresy itp"
+      ],
+      "metadata": {
+        "id": "QykiENKZTC3H"
+      }
     }
   ]
 }
